<resources>
    <string name="app_name">푸앤카레</string>
    <string name="text_flash">플래쉬</string>
    <string name="text_timer">타이머</string>
    <string name="text_timer_message_format">%d</string>

    <!--CameraActivity.kt-->
    <string name="text_flash_TORCH">TORCH</string>
    <string name="text_flash_AUTO">AUTO</string>
    <string name="text_flash_ON">ON</string>
    <string name="text_grid">그리드</string>
    <string name="text_grid_three_by_three">3X3</string>
    <string name="text_grid_phi">PHI</string>
    <string name="text_grid_four_by_four">4X4</string>
    <string name="text_finish_snackbar">\'뒤로\' 버튼을 한 번 더 누르면 종료합니다.</string>

    <!--MainActivity.java-->
    <string name="text_denied_permission">단말기의 [설정] > [권한]에서 접근 권한을 ON으로 설정해주세요.\n\n* 카메라\n* 저장공간</string>
    <string name="text_settings">설정</string>
    <string name="text_cancel">취소</string>

    <!--BaseActivity.kt-->
    <string name="text_confirm">확인</string>

    <!--activity_camera.xml-->
    <string name="text_diary">다이어리</string>
    <string name="text_gallery">갤러리</string>
    <string name="text_capture_size_one_to_one">1:1</string>
    <string name="text_capture_size_three_to_four">3:4</string>
    <string name="text_capture_size_nine_to_sixteen">9:16</string>

    <!--EditPhotoActivity.java-->
    <string name="toast_cannot_retrieve_selected_image">선택한 사진을 불러올 수 없습니다</string>
    <string name="label_select_picture">사진 선택</string>
    <string name="toast_cannot_retrieve_cropped_image">편집된 사진을 반영할 수 없습니다</string>
    <string name="edit_photo_category_number">IntentNumber</string>
    <string name="capture_photo_uri">Preview</string>
    <string name="dont_load_captured_photo">사진을 로드할 수 없습니다</string>
    <string name="toast_unexpected_error">예상치못한 오류</string>

    <!--activity_edit_result.xml-->
    <string name="format_crop_result_d_d">편집 결과</string>

    <!--menu_edit_result.xml-->
    <string name="menu_download">다운로드</string>

    <!--EditResultActivity.java -->
    <string name="notification_image_saved">이미지 저장되었습니다</string>

    <string name="text_preview_back">뒤로</string>
    <string name="text_edit">편집</string>

    <string name="text_mkdir_success">폴더 생성 성공</string>
    <string name="text_mkdir_fail">폴더 생성 실패</string>
    <string name="text_edited_photo">편집한 사진</string>

    <!--dialog_fragment_sign.xml-->
    <string name="text_input_email">이메일</string>
    <string name="text_input_password">패스워드</string>
    <string name="text_hint_email">abc@example.com</string>
    <string name="text_hint_password">6자리 이상</string>
    <string name="text_signin">로그인</string>
    <string name="text_ask_signup">혹시 처음이신가요?</string>
    <string name="text_signup">회원가입</string>
    <string name="text_signin_success">로그인 성공</string>
    <string name="text_signup_success">가입 성공</string>
    <string name="text_sign_fail">사용자 정보를 확인하세요.</string>

    <!--SignOutDialogFragment.kt-->
    <string name="text_signout">로그아웃</string>
    <string name="text_signout_success">로그아웃 성공</string>
    <string name="text_signout_fail">로그아웃 실패</string>

    <!--SignOutDialogFragment.kt-->
    <string name="text_ask_signout">로그아웃 하시겠습니까?</string>

    <!--BackupRestoreDialogFragment.kt-->
    <string name="text_no_backup_data">작성한 다이어리가 없습니다.</string>
    <string name="text_no_restore_data">서버에 저장한 다이어리가 없습니다.</string>
    <string name="text_network_error">네트워크 연결을 확인하세요.</string>
    <string name="text_backup_success">백업 성공</string>
    <string name="text_backup_fail">백업 실패</string>
    <string name="text_restore_success">복원 성공</string>
    <string name="text_restore_fail">복원 실패</string>
    <string name="text_ask_backup">백업 하시겠습니까?</string>
    <string name="text_ask_restore">복원 하시겠습니까?</string>

    <!--preference_settings.xml-->
    <string name="text_user">사용자</string>
    <string name="text_need_to_signin">로그인이 필요합니다.</string>
    <string name="text_backup_restore">백업 및 복원</string>
    <string name="text_summary_backup">다이어리 및 사진 파일을 서버에 백업하여 앱 재설치할 때 복원할 수 있습니다.</string>
    <string name="text_summary_restore">백업한 다이어리 및 사진 파일을 복원할 수 있습니다.</string>
    <string name="text_do_backup">백업하기</string>
    <string name="text_do_restore">복원하기</string>
    <string name="text_reminder_settings">알림 설정</string>
    <string name="text_reminder">알림</string>
    <string name="text_summary_reminder">설정한 시간마다 알림이 오도록 설정할 수 있습니다.</string>

    <!--GalleryActivity.kt-->
    <string name="spinner_folder_name_count">"%s (%d)"</string>
    <string name="spinner_folder_all">All</string>

    <!--activity_diary_detail.xml-->
    <string name="text_diary_date">5월 10일</string>
    <string name="text_diary_time">8:00PM</string>
    <string name="text_diary_test_image">테스트 이미지입니다</string>
    <string name="text_diary_content">맛있었다!\n꿀맛꿀맛...!\n또 가고싶어지네~~~\nJMT</string>
    <string name="text_diary_content_hint">음식에 대해 기록해주세요</string>

    <!--DiaryEditActivity.java-->
    <string name="text_diary_add_title">추가</string>
    <string name="text_diary_added">다이어리가 추가되었습니다</string>
    <string name="text_diary_updated">다이어리가 변경되었습니다</string>
    <string name="text_diary_deleted">다이어리가 삭제되었습니다</string>
    <string name="text_capture_photo">사진 촬영</string>
    <string name="text_pick_gallery">사진 선택</string>
    <string name="text_do_select_photo_action">선택하시오</string>
    <string name="text_cancel_editing">작성 취소</string>
    <string name="text_cancel_editing_question">정말로 취소하시겠습니까?</string>

    <!--DiaryDetailActivity.java-->
    <string name="text_diary_detail_deleted">삭제되었습니다</string>
    <string name="text_dialog_ok">네</string>
    <string name="text_dialog_no">아니오</string>
    <string name="text_toolbar_edit">편집</string>
    <string name="text_photo_description">photo</string>
    <string name="text_toolbar_detail">상세</string>
    <string name="text_diary_delete">다이어리 삭제</string>
    <string name="test_diary_delete_question">정말로 삭제하시겠습니까?</string>

    <!--LocalDiaryRepository.java-->
    <string name="text_cant_add_diary">다이어리 추가를 하지 못했습니다</string>
    <string name="text_cant_update_diary">다이어리 변경을 하지 못했습니다</string>
    <string name="text_cant_delete_diary">다이어리를 삭제하지 못했습니다</string>

    <!--DiariesActivity.java-->
    <string name="text_date_now_page">%d.%d</string>

    <!--DiariesAdapter.java-->
    <string name="text_day_now_diary">%d일</string>
    <string name="text_time_now_diary">%d:%s</string>
    <string name="text_yogidiary_path">%s/%s</string>

    <!--ReminderNotification.kt-->
    <string name="text_start_camera">촬영하기</string>
    <string name="text_start_diary_add">작성하기</string>
    <string name="text_ask_food_title">어떤 음식을 드셨나요?</string>
    <string name="text_ask_food_message">궁금해요!🤔</string>

    <!--activity_preview.xml-->
    <string name="text_write_diary">글쓰기</string>

    <!--PreviewActivity.kt-->
    <string name="text_no_save_preview_image">사진을 저장할 수 없습니다</string>


</resources>
