<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_signin_dialog"
    android:layout_width="280dp"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_input_email" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_email"
        android:layout_marginTop="4dp"
        android:hint="@string/text_hint_email" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_marginTop="4dp"
        android:text="@string/text_input_password" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_password"
        android:layout_marginTop="4dp"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_show_sign_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:text="@string/text_sign_fail"
        android:textColor="@color/color_FDB32D"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_show_sign_fail"
        android:layout_marginTop="12dp"
        android:text="@string/text_signin" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_show_sign_fail"
        android:layout_marginTop="12dp"
        android:text="@string/text_signup"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/relative_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/text_ask_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ask_signup" />

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/text_ask_signup"
            android:layout_toRightOf="@+id/text_ask_signup"
            android:text="@string/text_signup"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>