<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".diary.DiaryDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorAccent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/text_toolbar_detail"
        app:titleTextColor="@android:color/white" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".diary.DiaryDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_diary_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/text_diary_date"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tv_diary_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/text_diary_time"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_diary_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/text_diary_test_image"
                android:scaleType="fitCenter"
                android:src="@drawable/test_image" />

            <TextView
                android:id="@+id/tv_diary_detail_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text_diary_content"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>